2005-06-24  Tom Tromey  <tromey@redhat.com>

	* bytecode/verify.cc (verify_instructions_0): Correctly handle
	situation where PC falls off end.

2005-05-17  Tom Tromey  <tromey@redhat.com>

	* bytecode/generate.cc (visit_method): Updated.
	(visit_return): Use request().
	* bytecode/locals.cc (request(bool)): New method.
	(request(model_variable_decl*)): Use it.
	(request()): New method.
	* bytecode/locals.hh (locals::request): Declare.

2005-05-16  Tom Tromey  <tromey@redhat.com>

	* bytecode/generate.cc (visit_return): If there are cleanups, save
	result expression in local variable.

2005-05-16  Tom Tromey  <tromey@redhat.com>

	* defassign.cc (class definite_assignment_visitor): Removed some
	old comments.

2005-05-07  Tom Tromey  <tromey@redhat.com>

	* verify.h (GLOM): Removed.
	(VFY_PRIMITIVE_CLASS): Likewise.

2005-04-30  Tom Tromey  <tromey@redhat.com>

	* aot/aotclass.cc (get_descriptor): New helper function.
	(add): Use it.

2005-04-28  Tom Tromey  <tromey@redhat.com>

	* header/cni.cc (generate): Use aot class' vtable layout.
	(write_include): New method.
	(write_includes): Use it.  Added 'vtable' argument.
	* header/cni.hh (cni_code_generator::factory): New field.
	(cni_code_generator::write_include): Declare.
	(cni_code_generator::write_includes): Updated.

2005-04-26  Tom Tromey  <tromey@redhat.com>

	* aot/mangle.cc (update): Create separate entry for pointer type.
	(update_array): Likewise.
	(update): Emit pending characters at end if needed.

2005-04-18  Tom Tromey  <tromey@redhat.com>

	* header/jni.cc (write_field): Actually emit #define.

2005-04-18  Tom Tromey  <tromey@redhat.com>

	* header/jni.cc (generate): Only write native methods.

2005-04-17  Tom Tromey  <tromey@redhat.com>

	* header/cni.cc (generate): Superclass of interface is Object.
	Emit attribute for java interface.

2005-04-23  Tom Tromey  <tromey@redhat.com>

	* model/invoke.cc (find_method): Call 'set_used' before early
	return.

2005-04-20  Tom Tromey  <tromey@redhat.com>
