@@ -2955,9 +2955,8 @@ private:
 	  case op_new:
 	    {
 	      type t = check_class_constant (get_ushort ());
-	      if (t.isarray () || t.isinterface (this) || t.isabstract (this))
-		verify_fail ("type for 'new' is array, interface, "
-			     "or abstract");
+	      if (t.isarray ())
+		verify_fail ("type for 'new' is array");
 	      t.set_uninitialized (start_PC, this);
 	      push_type (t);
 	    }
